# tsc-watch-wrapper

./: ChangeLog.md  README.md  tsc-watch-wrapper.cabal
src/: Main.hs
