name:                tsc-watch-wrapper
version:             0.1.0.0
synopsis:            Enhanced TypeScript tsc "watch" functionality
description:
    This program will run the TypeScript compiler in \"watch\" mode (in the
    current directory). When any file changes, a new compilation will
    automatically be triggered: when this compilation completes, the callback
    program that you supplied will be run.
license:             MIT
license-file:        LICENSE
author:              Bit Connor
maintainer:          mutantlemon@gmail.com
copyright:           Bit Connor <mutantlemon@gmail.com>
homepage:            https://github.com/bitc/tsc-watch-wrapper
bug-reports:         https://github.com/bitc/tsc-watch-wrapper/issues
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/bitc/tsc-watch-wrapper.git

executable tsc-watch-wrapper
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.10,
                       ansi-wl-pprint,
                       bytestring,
                       conduit,
                       conduit-combinators,
                       conduit-extra,
                       directory,
                       exceptions,
                       optparse-applicative,
                       process,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010
